# armada_manipulation_old

./: CMakeLists.txt  README.md  package.xml
cfg/: fetch_workstation_sim_params.yaml  gen3_workstation_sim_params.yaml  ros_eigen_params.cfg  ros_eigen_params_BACKUP_28071.cfg  ros_eigen_params_LOCAL_28071.cfg  ros_eigen_params_fetch.cfg  ros_eigen_params_gen3.cfg  ros_vino_params.cfg  ur5e_workstation_sim_params.yaml  ur5e_wrist_d435.yaml
include/: grasp_cluster_class.hpp  logger.hpp  manipulation_class.hpp  navigation_class.hpp  perception_class.hpp
launch/: fetch_grasp.launch  fetch_mobile_man.launch  fetch_nav.launch  fetch_sim.launch  gen3_sim.launch  gpd_fetch.launch  gpd_gen3.launch  gpd_ur5.launch  passthrough_filter.launch  pick_and_place.launch  ur5_driver_test.launch  ur5_manipulation.launch  ur5_sim.launch  workstation_gpd.launch
rviz/: gen3_rviz_config.rviz
src/functions/: grasp_cluster_class.cpp  logger.cpp  manipulation_class.cpp  navigation_class.cpp  perception_class.cpp  pointcloud_filters.cpp
src/nodes/: add_two_ints_client.cpp  basic_manipulation_and_2d_perception.cpp  basic_manipulation_and_3d_perception.cpp  fetch_pick_and_place.cpp  gen3_pick_and_place.cpp  pick_and_place.cpp  pick_and_place_gazebo.cpp  pick_and_place_old.cpp  wrist_cam_pick_and_place.cpp
src/services/: add_two_ints_server.cpp  capture_pointcloud_service.cpp  spawn_object.py
srv/: CapturePointCloud.srv  SpawnObject.srv
